# game-hilo

./: .dockerignore  .dodo  .env  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  api.Dockerfile  api.env.example  card.py  database.db  db.env.example  deck.py  docker-compose-prod.yml  docker-compose.yml  dockerhub_login.enc  game.py  hilo-game.py  inventory  main.py  playbook.yml  player.py  pyproject.toml  requirements.txt  roundinfo.py  roundresult.py  setup.cfg
.github/workflows/: actions.yml  docker-build-terraform-plan.yml  linting.yml  pre-commit-hooks.yml  pre-commit.yml  terraform-apply-on-master-commit.yml  terraform-deploy-on-master-push.yml  terraform-plan.yml
api/: __init__.py  database.db  database.py  main.py  models.py
api/repository/: crud.py  errors.py
api/router/: error_codes.py  exceptions.py
api/services/: game.py  jwt.py  pickler.py  user.py
authentication/: authentication.py  authenticator.py
authentication/models/: credentials.py
database/: authentication.py  connection.py  encryption.py  loginpage.py  repository.py
deprecated/authentication/: authenticator.py
frontend/: nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts
hilo/: game.py
hilo-db/: Dockerfile
hilo-db/docker-entrypoint-initdb.d/: init.sql
hilo/models/: card.py  deck.py  player.py  roundinfo.py  roundresult.py
psqldb/: Dockerfile
repository/: errors.py  user.py
repository/models/: user.py
terraform/: hosts.tftpl  inventory  main.tf  main.tf.bak  terraform.tfstate  terraform.tfstate.backup
tests/: pytest.ini  test_card.py  test_deck.py  test_player.py  test_roundinfo.py  test_roundresult.py  test_sample.py
tests/integration/: conftest.py  test_failed_round_bankruptcy_no_continue.py  test_failed_round_empty_deck_with_continue.py  test_integration.py  test_quit_at_menu.py  test_successful_round_no_continue.py  test_successful_round_with_continue.py
tests/unit/: conftest.py  test_card.py  test_deck.py  test_game.py  test_roundinfo.py  (+1 more)
(+131 files in other folders)
