[tool.poetry]
name = "game-hilo"
version = "0.1.0"
description = ""
authors = ["Bobotato <bhojwanialexander@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.4"

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"
black = "^22.3.0"
mypy = "^0.960"
flake8 = "^4.0.1"
pynvim = "^0.4.3"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
